--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         .latest-work, .work-section {
             padding: 2rem 1rem;
             text-align: center;
+            margin-top: 2rem;
         }
         .latest-work h2, .work-section h2 {
             margin-bottom: 1rem;
@@ -55,12 +56,23 @@
         }
         .work-item h3 {
             padding: 1rem;
+            margin: 0;
+        }
+        .work-item p {
+            padding: 0 1rem 1rem;
+            margin: 0;
         }
         footer {
             background-color: #000;
             color: #fff;
             text-align: center;
             padding: 1rem 0;
+            margin-top: 2rem;
+        }
+        iframe {
+            width: 100%;
+            height: 300px;
+            border: none;
         }
     </style>
 </head>
@@ -79,11 +91,11 @@
 
 <section id="latest-work" class="latest-work">
     <h2>最新作品</h2>
-    <div class="work-item">
-        <img src="path_to_your_image.jpg" alt="最新作品">
-        <h3>作品标题</h3>
-        <p>作品简介。</p>
-    </div>
+    <!-- 将视频嵌入到此处 -->
+    <video width="640" height="360" controls>
+      <source src="/Users/xialiang/Desktop/Hin桌面/1.视频/千人千面/5.2-mk个人短片/成片/5月4日-mk.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
 </section>
 
 <section id="work-section" class="work-section">
