--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        iframe {
+        video {
             width: 100%;
-            height: 300px;
-            border: none;
+            height: auto;
         }
     </style>
 </head>
@@ -92,7 +91,7 @@
 <section id="latest-work" class="latest-work">
     <h2>最新作品</h2>
     <!-- 将视频嵌入到此处 -->
-    <video width="640" height="360" controls>
+    <video controls>
       <source src="/Users/xialiang/Desktop/Hin桌面/1.视频/千人千面/5.2-mk个人短片/成片/5月4日-mk.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
