--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h2>最新作品</h2>
     <!-- 将视频嵌入到此处 -->
     <video controls>
-      <source src="https://github.com/Hin-wadi/my-website/raw/main/videos/5月4日-mk.mp4" type="video/mp4"" type="video/mp4">
+      <source src="https://github.com/Hin-wadi/my-website/raw/main/video/5\346\234\2104\346\227\245-mk.mp4" type="video/mp4"" type="video/mp4">
       Your browser does not support the video tag.
     </video>
 </section>
