--- a/index.html
+++ b/index.html
@@ -51,20 +51,24 @@
             color: #000;
             text-transform: uppercase;
         }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%;
-            height: 0;
-            overflow: hidden;
-            max-width: 100%;
-            background: #000;
+        .video-gallery {
+            display: flex;
+            overflow-x: scroll;
+            padding-bottom: 1rem;
         }
-        .video-container video {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .video-item {
+            min-width: 300px;
+            margin-right: 1rem;
+            background-color: #000;
+        }
+        .video-item video {
             width: 100%;
-            height: 100%;
+            height: auto;
+        }
+        .work-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         .work-item {
             display: inline-block;
@@ -112,65 +116,73 @@
 <div class="container">
     <section id="latest-work" class="section">
         <h2 class="section-title">最新作品</h2>
-        <div class="video-container">
-            <video controls>
-                <source src="https://github.com/Hin-wadi/my-website/raw/main/video/5%E6%9C%884%E6%97%A5-mk.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        <div class="video-container">
-            <video controls>
-                <source src="https://github.com/Hin-wadi/my-website/raw/main/video/another-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-        <div class="video-container">
-            <video controls>
-                <source src="https://github.com/Hin-wadi/my-website/raw/main/video/yet-another-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <div class="video-gallery">
+            <div class="video-item">
+                <video controls>
+                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/5%E6%9C%884%E6%97%A5-mk.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="video-item">
+                <video controls>
+                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/another-video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="video-item">
+                <video controls>
+                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/yet-another-video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </div>
     </section>
 
     <section id="video-works" class="section">
         <h2 class="section-title">视频作品</h2>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="视频作品1">
-            <h3>视频作品标题1</h3>
-            <p>视频作品简介1。</p>
-        </div>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="视频作品2">
-            <h3>视频作品标题2</h3>
-            <p>视频作品简介2。</p>
+        <div class="work-gallery">
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="视频作品1">
+                <h3>视频作品标题1</h3>
+                <p>视频作品简介1。</p>
+            </div>
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="视频作品2">
+                <h3>视频作品标题2</h3>
+                <p>视频作品简介2。</p>
+            </div>
         </div>
     </section>
 
     <section id="design-works" class="section">
         <h2 class="section-title">设计作品</h2>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="设计作品1">
-            <h3>设计作品标题1</h3>
-            <p>设计作品简介1。</p>
-        </div>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="设计作品2">
-            <h3>设计作品标题2</h3>
-            <p>设计作品简介2。</p>
+        <div class="work-gallery">
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="设计作品1">
+                <h3>设计作品标题1</h3>
+                <p>设计作品简介1。</p>
+            </div>
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="设计作品2">
+                <h3>设计作品标题2</h3>
+                <p>设计作品简介2。</p>
+            </div>
         </div>
     </section>
 
     <section id="painting-works" class="section">
         <h2 class="section-title">绘画作品</h2>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="绘画作品1">
-            <h3>绘画作品标题1</h3>
-            <p>绘画作品简介1。</p>
-        </div>
-        <div class="work-item">
-            <img src="path_to_your_image.jpg" alt="绘画作品2">
-            <h3>绘画作品标题2</h3>
-            <p>绘画作品简介2。</p>
+        <div class="work-gallery">
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="绘画作品1">
+                <h3>绘画作品标题1</h3>
+                <p>绘画作品简介1。</p>
+            </div>
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="绘画作品2">
+                <h3>绘画作品标题2</h3>
+                <p>绘画作品简介2。</p>
+            </div>
         </div>
     </section>
 
