--- a/index.html
+++ b/index.html
@@ -3,84 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人网页</title>
+    <title>您的网站标题</title>
     <style>
-        /* CSS 样式部分保持不变 */
+        /* 全局样式 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        /* 头部样式 */
+        header {
+            background-color: #000;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 1rem;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        /* 主体内容容器样式 */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+
+        /* 节段样式 */
+        .section {
+            padding: 2rem 0;
+            text-align: center;
+        }
+
+        .section-title {
+            margin-bottom: 2rem;
+            font-size: 2rem;
+            color: #000;
+            text-transform: uppercase;
+        }
+
+        /* 视频样式 */
+        .video-gallery {
+            display: flex;
+            overflow-x: scroll;
+            padding-bottom: 1rem;
+        }
+
+        .video-item {
+            min-width: 300px;
+            margin-right: 1rem;
+            background-color: #000;
+        }
+
+        .video-item video {
+            width: 100%;
+            height: auto;
+        }
+
+        /* 作品集样式 */
+        .work-gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .work-item {
+            display: inline-block;
+            width: 30%;
+            margin: 1%;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: left;
+        }
+
+        .work-item img {
+            width: 100%;
+            height: auto;
+        }
+
+        .work-item h3 {
+            padding: 1rem;
+            margin: 0;
+            font-size: 1.5rem;
+        }
+
+        .work-item p {
+            padding: 0 1rem 1rem;
+            margin: 0;
+        }
+
+        /* 页脚样式 */
+        footer {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 1rem 0;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <nav>
-        <!-- 导航链接部分保持不变 -->
+        <ul>
+            <!-- 导航链接 -->
+            <li><a href="#latest-work">最新作品</a></li>
+            <li><a href="#video-works">视频作品</a></li>
+            <li><a href="#design-works">设计作品</a></li>
+            <li><a href="#painting-works">绘画作品</a></li>
+            <li><a href="#about">关于我</a></li>
+        </ul>
     </nav>
 </header>
 
 <div class="container">
+    <!-- 最新作品节段 -->
     <section id="latest-work" class="section">
         <h2 class="section-title">最新作品</h2>
         <div class="video-gallery">
+            <!-- 视频项 -->
             <div class="video-item">
-                <video id="video1" controls>
-                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/5%E6%9C%884%E6%97%A5-mk.mp4" type="video/mp4">
+                <video controls>
+                    <source src="path_to_your_video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
-            <div class="video-item">
-                <video id="video2" controls>
-                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/another-video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-            <div class="video-item">
-                <video id="video3" controls>
-                    <source src="https://github.com/Hin-wadi/my-website/raw/main/video/yet-another-video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+            <!-- 其他视频项 -->
         </div>
     </section>
 
-    <!-- 其他部分保持不变 -->
-</div>
+    <!-- 视频作品节段 -->
+    <section id="video-works" class="section">
+        <h2 class="section-title">视频作品</h2>
+        <div class="work-gallery">
+            <!-- 视频作品项 -->
+            <div class="work-item">
+                <img src="path_to_your_image.jpg" alt="视频作品1">
+                <h3>视频作品标题1</h3>
+                <p>视频作品简介1。</p>
+            </div>
+            <!-- 其他视频作品项 -->
+        </div>
+    </section>
 
-<footer>
-    <!-- 页脚部分保持不变 -->
-</footer>
-
-<script>
-    // JavaScript 部分
-    const videos = document.querySelectorAll('.video-item video');
-    let currentIndex = 0;
-
-    // 隐藏所有视频
-    function hideAllVideos() {
-        videos.forEach(video => {
-            video.style.display = 'none';
-        });
-    }
-
-    // 显示当前索引的视频
-    function showCurrentVideo() {
-        hideAllVideos();
-        videos[currentIndex].style.display = 'block';
-    }
-
-    // 点击下一个按钮
-    function nextVideo() {
-        currentIndex = (currentIndex + 1) % videos.length;
-        showCurrentVideo();
-    }
-
-    // 点击上一个按钮
-    function prevVideo() {
-        currentIndex = (currentIndex - 1 + videos.length) % videos.length;
-        showCurrentVideo();
-    }
-
-    // 初始化显示第一个视频
-    showCurrentVideo();
-</script>
-
-</body>
-</html>
+    <!-- 设计作品节段 -->
+    <section id="design-works" class="section">
+        <h2 class="section-title">设计作品</h2>
+        <div class="work-gallery">
+            <!-- 设计作品项 -->
+            <div class="work-item">
+                <
