--- a/index.html
+++ b/index.html
@@ -3,174 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>您的网站标题</title>
+    <title>示例网站</title>
     <style>
-        /* 全局样式 */
+        /* 样式代码可以在这里添加 */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f7f7f7;
             color: #333;
         }
-
-        /* 头部样式 */
         header {
-            background-color: #000;
+            background-color: #333;
             color: #fff;
-            padding: 1rem 0;
+            padding: 20px;
             text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
         }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
+        nav {
+            background-color: #444;
+            padding: 10px;
+            text-align: center;
         }
-
-        nav ul li {
-            margin: 0 1rem;
-        }
-
-        nav ul li a {
+        nav a {
             color: #fff;
             text-decoration: none;
-            font-weight: bold;
+            margin: 0 10px;
         }
-
-        /* 主体内容容器样式 */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem;
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-gap: 20px;
+            padding: 20px;
         }
-
-        /* 节段样式 */
-        .section {
-            padding: 2rem 0;
-            text-align: center;
-        }
-
-        .section-title {
-            margin-bottom: 2rem;
-            font-size: 2rem;
-            color: #000;
-            text-transform: uppercase;
-        }
-
-        /* 视频样式 */
-        .video-gallery {
-            display: flex;
-            overflow-x: scroll;
-            padding-bottom: 1rem;
-        }
-
-        .video-item {
-            min-width: 300px;
-            margin-right: 1rem;
-            background-color: #000;
-        }
-
-        .video-item video {
-            width: 100%;
-            height: auto;
-        }
-
-        /* 作品集样式 */
-        .work-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-
-        .work-item {
-            display: inline-block;
-            width: 30%;
-            margin: 1%;
+        .grid-item {
             background-color: #fff;
+            padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: left;
+            transition: transform 0.3s ease;
         }
-
-        .work-item img {
+        .grid-item:hover {
+            transform: translateY(-5px);
+        }
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 视频比例 */
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: auto;
+            height: 100%;
         }
-
-        .work-item h3 {
-            padding: 1rem;
-            margin: 0;
-            font-size: 1.5rem;
-        }
-
-        .work-item p {
-            padding: 0 1rem 1rem;
-            margin: 0;
-        }
-
-        /* 页脚样式 */
         footer {
-            background-color: #000;
+            background-color: #333;
             color: #fff;
+            padding: 20px;
             text-align: center;
-            padding: 1rem 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-
-<header>
+    <header>
+        <h1>网站标题</h1>
+        <p>网站副标题</p>
+    </header>
     <nav>
-        <ul>
-            <!-- 导航链接 -->
-            <li><a href="#latest-work">最新作品</a></li>
-            <li><a href="#video-works">视频作品</a></li>
-            <li><a href="#design-works">设计作品</a></li>
-            <li><a href="#painting-works">绘画作品</a></li>
-            <li><a href="#about">关于我</a></li>
-        </ul>
+        <a href="#">导航链接1</a>
+        <a href="#">导航链接2</a>
+        <a href="#">导航链接3</a>
     </nav>
-</header>
-
-<div class="container">
-    <!-- 最新作品节段 -->
-    <section id="latest-work" class="section">
-        <h2 class="section-title">最新作品</h2>
-        <div class="video-gallery">
-            <!-- 视频项 -->
-            <div class="video-item">
-                <video controls>
-                    <source src="path_to_your_video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+    <div class="grid-container">
+        <div class="grid-item">
+            <h2>文章标题1</h2>
+            <p>文章内容摘要1</p>
+            <div class="video-container">
+                <!-- 这里放置视频的 iframe -->
             </div>
-            <!-- 其他视频项 -->
         </div>
-    </section>
-
-    <!-- 视频作品节段 -->
-    <section id="video-works" class="section">
-        <h2 class="section-title">视频作品</h2>
-        <div class="work-gallery">
-            <!-- 视频作品项 -->
-            <div class="work-item">
-                <img src="path_to_your_image.jpg" alt="视频作品1">
-                <h3>视频作品标题1</h3>
-                <p>视频作品简介1。</p>
+        <div class="grid-item">
+            <h2>文章标题2</h2>
+            <p>文章内容摘要2</p>
+            <div class="video-container">
+                <!-- 这里放置视频的 iframe -->
             </div>
-            <!-- 其他视频作品项 -->
         </div>
-    </section>
-
-    <!-- 设计作品节段 -->
-    <section id="design-works" class="section">
-        <h2 class="section-title">设计作品</h2>
-        <div class="work-gallery">
-            <!-- 设计作品项 -->
-            <div class="work-item">
-                <
+        <div class="grid-item">
+            <h2>文章标题3</h2>
+            <p>文章内容摘要3</p>
+            <div class="video-container">
+                <!-- 这里放置视频的 iframe -->
+            </div>
+        </div>
+        <!-- 这里可以根据需要添加更多的文章和视频 -->
+    </div>
+    <footer>
+        <p>版权所有 © 2024 示例公司</p>
+    </footer>
+</body>
+</html>
