--- a/index.html
+++ b/index.html
@@ -1,109 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例网站</title>
-    <style>
-        /* 样式代码可以在这里添加 */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            grid-gap: 20px;
-            padding: 20px;
-        }
-        .grid-item {
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .grid-item:hover {
-            transform: translateY(-5px);
-        }
-        .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 视频比例 */
-            overflow: hidden;
-            margin-bottom: 20px;
-        }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>网站标题</h1>
-        <p>网站副标题</p>
-    </header>
-    <nav>
-        <a href="#">导航链接1</a>
-        <a href="#">导航链接2</a>
-        <a href="#">导航链接3</a>
-    </nav>
-    <div class="grid-container">
-        <div class="grid-item">
-            <h2>文章标题1</h2>
-            <p>文章内容摘要1</p>
-            <div class="video-container">
-                <!-- 这里放置视频的 iframe -->
-            </div>
-        </div>
-        <div class="grid-item">
-            <h2>文章标题2</h2>
-            <p>文章内容摘要2</p>
-            <div class="video-container">
-                <!-- 这里放置视频的 iframe -->
-            </div>
-        </div>
-        <div class="grid-item">
-            <h2>文章标题3</h2>
-            <p>文章内容摘要3</p>
-            <div class="video-container">
-                <!-- 这里放置视频的 iframe -->
-            </div>
-        </div>
-        <!-- 这里可以根据需要添加更多的文章和视频 -->
-    </div>
-    <footer>
-        <p>版权所有 © 2024 示例公司</p>
-    </footer>
-</body>
-</html>
+<div class="nn-header-main__top-container container"><a id="js-hamburger" class="top-container__menu-switcher" href="" ng-click="$root.header.toggle({ item: 'mainNav', navClick: true })" ng-class="{ 'top-container__menu-switcher--opened': header.mainNav.visible }"><i></i><i></i><i></i></a><a class="top-container__logo" ng-click="$root.mainLogoClick($event)" href="/"><h1><span class="top-container__title">NOWNESS</span> <img ng-src="/assets/img/logo.svg" alt="Nowness" src="/assets/img/logo.svg"></h1></a><a class="top-container__takeover-logo" ng-click="$root.mainLogoClick($event)" href="/"></a><div class="top-container__toolbar"><a id="js-search-modal-trigger" href="" ng-click="nnModalsService.toggleModal('search'); $root.analytics.topNavButton('Search');" ng-class="{ persist: nnModalsService.isModalVisible('search') }" class="toolbar__search"><i class="icon-loupe"></i></a><div class="toolbar__queue" id="js-player-drawer-trigger" ng-click="changePlayerDrawerVisibility()"><a href="" class="queue__play-btn"><i class="icon-play" ng-class="{ 'queue__ico--hidden': $root.showDrawerVideo || $root.swappySwap}"></i> <i class="icon-tick queue__ico--absolute queue__ico--accent queue__ico--hidden" ng-class="{ 'queue__ico--hidden': !$root.swappySwap }"></i> <i class="icon-x queue__ico--absolute queue__ico--hidden" ng-class="{ 'queue__ico--hidden': !$root.showDrawerVideo}"></i></a> <!-- ngIf: $root.playlist.items.length --></div><a id="js-user-btn" href="" ng-click="$root.header.toggle({ item: 'userNav', navClick: true })" ng-class="{'-active-m': header.userNav.visible || nnModalsService.isModalVisible('login')}"><i class="icon-user"></i></a> <!-- ngIf: $root.token --></div></div>
